/**
 * Snapshot tests for human-readable renderers. Renderers are pure
 * so the snapshots double as a contract: changes to the rendering
 * output must be intentional and reviewed in the same PR that
 * regenerates the snapshot.
 *
 * Chalk is disabled (level 0) so snapshots don't include ANSI codes —
 * makes them readable in PR diffs.
 */
import { describe, it, expect, beforeAll } from 'vitest';
import chalk from 'chalk';
import { renderUser, renderUsage, renderProject, renderProjectList, renderMember, renderMemberList, renderReport, renderReportList, renderNote, renderNoteList, renderFile } from '../lib/render.js';

beforeAll(() => {
  chalk.level = 0;
});

describe('renderUser', () => {
  it('renders a fully populated user', () => {
    expect(
      renderUser({
        id: '00000000-0000-0000-0000-000000000001',
        email: 'user1@example.com',
        displayName: 'Patrick Chin',
        companyName: 'Harpa Pro Ltd',
        createdAt: '2025-01-15T10:30:00.000Z',
      }),
    ).toMatchSnapshot();
  });

  it('renders a user missing optional fields', () => {
    expect(
      renderUser({
        id: '00000000-0000-0000-0000-000000000002',
        email: 'user2@example.com',
        displayName: null,
        companyName: null,
        createdAt: '2025-01-15T10:30:00.000Z',
      }),
    ).toMatchSnapshot();
  });
});

describe('renderUsage', () => {
  it('renders months + totals', () => {
    expect(
      renderUsage({
        months: [
          { month: '2025-01', reports: 12, voiceNotes: 47 },
          { month: '2024-12', reports: 8, voiceNotes: 31 },
        ],
        totals: { reports: 20, voiceNotes: 78 },
      }),
    ).toMatchSnapshot();
  });

  it('renders empty usage', () => {
    expect(
      renderUsage({
        months: [],
        totals: { reports: 0, voiceNotes: 0 },
      }),
    ).toMatchSnapshot();
  });
});

describe('renderProject', () => {
  const baseProject = {
    id: '00000000-0000-0000-0000-000000000010',
    slug: 'prj_a3k9wzm4',
    name: 'Demo Project',
    clientName: 'Acme Co',
    address: '1 Main St',
    ownerId: '00000000-0000-0000-0000-000000000001',
    myRole: 'owner' as const,
    createdAt: '2025-01-15T10:30:00.000Z',
    updatedAt: '2025-01-16T11:00:00.000Z',
  };

  it('renders a fully populated project with stats', () => {
    expect(
      renderProject({
        ...baseProject,
        stats: { totalReports: 5, drafts: 2, lastReportAt: '2025-01-16T09:00:00.000Z' },
      }),
    ).toMatchSnapshot();
  });

  it('renders a project missing optional fields', () => {
    expect(
      renderProject({
        ...baseProject,
        clientName: null,
        address: null,
      }),
    ).toMatchSnapshot();
  });
});

describe('renderProjectList', () => {
  it('renders a populated page with nextCursor', () => {
    expect(
      renderProjectList({
        items: [
          {
            id: '00000000-0000-0000-0000-000000000020',
            slug: 'prj_a3k9wzm4',
            name: 'Project A',
            clientName: 'Client A',
            address: null,
            ownerId: '00000000-0000-0000-0000-000000000001',
            myRole: 'owner',
            createdAt: '2025-01-15T10:30:00.000Z',
            updatedAt: '2025-01-15T10:30:00.000Z',
          },
          {
            id: '00000000-0000-0000-0000-000000000021',
            slug: 'prj_h7m2qxnb',
            name: 'Project B',
            clientName: null,
            address: null,
            ownerId: '00000000-0000-0000-0000-000000000001',
            myRole: 'editor',
            createdAt: '2025-01-15T10:30:00.000Z',
            updatedAt: '2025-01-15T10:30:00.000Z',
          },
        ],
        nextCursor: 'cursor-xyz',
      }),
    ).toMatchSnapshot();
  });

  it('renders an empty list', () => {
    expect(
      renderProjectList({ items: [], nextCursor: null }),
    ).toMatchSnapshot();
  });
});

describe('renderMember', () => {
  it('renders a fully populated member', () => {
    expect(
      renderMember({
        userId: '00000000-0000-0000-0000-000000000030',
        displayName: 'Alice',
        email: 'alice@example.com',
        role: 'editor',
        joinedAt: '2025-01-15T10:30:00.000Z',
      }),
    ).toMatchSnapshot();
  });

  it('renders a member without display name', () => {
    expect(
      renderMember({
        userId: '00000000-0000-0000-0000-000000000031',
        displayName: null,
        email: 'bob@example.com',
        role: 'viewer',
        joinedAt: '2025-01-15T10:30:00.000Z',
      }),
    ).toMatchSnapshot();
  });
});

describe('renderMemberList', () => {
  it('renders a populated list', () => {
    expect(
      renderMemberList({
        items: [
          {
            userId: '00000000-0000-0000-0000-000000000040',
            displayName: 'Owner Person',
            email: 'owner@example.com',
            role: 'owner',
            joinedAt: '2025-01-15T10:30:00.000Z',
          },
          {
            userId: '00000000-0000-0000-0000-000000000041',
            displayName: null,
            email: 'editor@example.com',
            role: 'editor',
            joinedAt: '2025-01-15T10:30:00.000Z',
          },
        ],
      }),
    ).toMatchSnapshot();
  });

  it('renders an empty member list', () => {
    expect(renderMemberList({ items: [] })).toMatchSnapshot();
  });
});

describe('renderReport', () => {
  const base = {
    id: '00000000-0000-0000-0000-000000000050',
    slug: 'rpt_4nbcp8sk',
    number: 1,
    projectId: '00000000-0000-0000-0000-000000000010',
    status: 'draft' as const,
    visitDate: '2025-01-15',
    createdAt: '2025-01-15T10:30:00.000Z',
    updatedAt: '2025-01-15T11:00:00.000Z',
  };
  it('renders a draft report', () => {
    expect(renderReport(base)).toMatchSnapshot();
  });
  it('renders a finalized report', () => {
    expect(
      renderReport({
        ...base,
        status: 'finalized',
        finalizedAt: '2025-01-15T12:00:00.000Z',
        body: { weather: { condition: 'sunny' } },
      }),
    ).toMatchSnapshot();
  });
  it('renders a report missing optional fields', () => {
    expect(renderReport({ ...base, visitDate: null })).toMatchSnapshot();
  });
});

describe('renderReportList', () => {
  it('renders a populated list', () => {
    expect(
      renderReportList({
        items: [
          {
            id: '00000000-0000-0000-0000-000000000060',
            slug: 'rpt_xy7k2vpm',
            number: 1,
            projectId: '00000000-0000-0000-0000-000000000010',
            status: 'draft',
            visitDate: '2025-01-15',
            createdAt: '2025-01-15T10:30:00.000Z',
            updatedAt: '2025-01-15T10:30:00.000Z',
          },
          {
            id: '00000000-0000-0000-0000-000000000061',
            slug: 'rpt_b8njq3wt',
            number: 2,
            projectId: '00000000-0000-0000-0000-000000000010',
            status: 'finalized',
            visitDate: null,
            createdAt: '2025-01-14T10:30:00.000Z',
            updatedAt: '2025-01-14T10:30:00.000Z',
          },
        ],
        nextCursor: null,
      }),
    ).toMatchSnapshot();
  });
  it('renders an empty list', () => {
    expect(renderReportList({ items: [], nextCursor: null })).toMatchSnapshot();
  });
});

describe('renderNote', () => {
  const base = {
    id: '00000000-0000-0000-0000-000000000070',
    reportId: '00000000-0000-0000-0000-000000000050',
    authorId: '00000000-0000-0000-0000-000000000001',
    kind: 'text' as const,
    body: 'Hello world',
    fileId: null,
    transcript: null,
    createdAt: '2025-01-15T10:30:00.000Z',
    updatedAt: '2025-01-15T10:30:00.000Z',
  };
  it('renders a text note', () => {
    expect(renderNote(base)).toMatchSnapshot();
  });
  it('renders a voice note with transcript and fileId', () => {
    expect(
      renderNote({
        ...base,
        kind: 'voice',
        body: null,
        fileId: '00000000-0000-0000-0000-000000000080',
        transcript: 'spoken words',
      }),
    ).toMatchSnapshot();
  });
});

describe('renderNoteList', () => {
  it('renders a populated list', () => {
    expect(
      renderNoteList({
        items: [
          {
            id: '00000000-0000-0000-0000-000000000071',
            reportId: '00000000-0000-0000-0000-000000000050',
            authorId: '00000000-0000-0000-0000-000000000001',
            kind: 'text',
            body: 'Short note',
            fileId: null,
            transcript: null,
            createdAt: '2025-01-15T10:30:00.000Z',
            updatedAt: '2025-01-15T10:30:00.000Z',
          },
          {
            id: '00000000-0000-0000-0000-000000000072',
            reportId: '00000000-0000-0000-0000-000000000050',
            authorId: '00000000-0000-0000-0000-000000000001',
            kind: 'voice',
            body: null,
            fileId: '00000000-0000-0000-0000-000000000080',
            transcript: null,
            createdAt: '2025-01-15T10:30:00.000Z',
            updatedAt: '2025-01-15T10:30:00.000Z',
          },
        ],
        nextCursor: 'cur-77',
      }),
    ).toMatchSnapshot();
  });
  it('renders an empty list', () => {
    expect(renderNoteList({ items: [], nextCursor: null })).toMatchSnapshot();
  });
});

describe('renderFile', () => {
  it('renders a file record', () => {
    expect(
      renderFile({
        id: '00000000-0000-0000-0000-000000000090',
        ownerId: '00000000-0000-0000-0000-000000000001',
        kind: 'image',
        fileKey: 'users/00000000-0000-0000-0000-000000000001/image/abc.jpg',
        sizeBytes: 12345,
        contentType: 'image/jpeg',
        createdAt: '2025-01-15T10:30:00.000Z',
      }),
    ).toMatchSnapshot();
  });
});
